## Makefile.am for tux4kids-common/data/images/menu
## Process with Automake to create Makefile.in

menudir = $(pkgdatadir)/images/menu

dist_menu_DATA = left_gray.png	\
	left_gray.svg	\
	left.png	\
	left.svg	\
	right_gray.png	\
	right_gray.svg	\
	right.png	\
	right.svg	\
	stop.png	\
	stop.svg	\
	tux4kids.png	\
	tux4kids.svg

